fix: change tabbar itmes places

--- a/YOUCAN/YOUCAN/View/Base.lproj/Main.storyboard
+++ b/YOUCAN/YOUCAN/View/Base.lproj/Main.storyboard
@@ -17,9 +17,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="uNT-Rj-zGR" kind="relationship" relationship="viewControllers" id="7GO-Qe-5FD"/>
-                        <segue destination="RvJ-8h-Lv8" kind="relationship" relationship="viewControllers" id="xOS-6Y-ALH"/>
                         <segue destination="Wfg-m7-RgF" kind="relationship" relationship="viewControllers" id="zVM-R2-fMP"/>
+                        <segue destination="RvJ-8h-Lv8" kind="relationship" relationship="viewControllers" id="xOS-6Y-ALH"/>
+                        <segue destination="uNT-Rj-zGR" kind="relationship" relationship="viewControllers" id="7GO-Qe-5FD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dgP-k4-MlY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -30,7 +30,7 @@
         <scene sceneID="e5m-HS-hsi">
             <objects>
                 <viewControllerPlaceholder storyboardName="ToDo" id="RvJ-8h-Lv8" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="zoB-us-ivn"/>
+                    <tabBarItem key="tabBarItem" title="ToDo" id="zoB-us-ivn"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YJP-PR-4Cw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -40,7 +40,7 @@
         <scene sceneID="EcV-y2-IRs">
             <objects>
                 <viewControllerPlaceholder storyboardName="Goals" id="uNT-Rj-zGR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="pfy-pU-fxh"/>
+                    <tabBarItem key="tabBarItem" title="Goals" id="pfy-pU-fxh"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KHc-k5-BYe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -50,7 +50,7 @@
         <scene sceneID="sbe-Je-HmR">
             <objects>
                 <viewControllerPlaceholder storyboardName="OverView" id="Wfg-m7-RgF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="CgX-0H-9MP"/>
+                    <tabBarItem key="tabBarItem" title="OverView" id="CgX-0H-9MP"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f1m-Gc-tbK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
